# IQOPTION-Forex-Analysis

./: README.md
ipoption-forex-analysis/: README.md  pyproject.toml  requirements.txt
ipoption-forex-analysis/docs/: usage.md
ipoption-forex-analysis/notebooks/: exploratory_analysis.ipynb
ipoption-forex-analysis/src/: cli.py  main.py
ipoption-forex-analysis/src/analysis/: features.py  indicators.py  ipoption_chart.py
ipoption-forex-analysis/src/backtest/: backtester.py  metrics.py
ipoption-forex-analysis/src/config/: settings.py
ipoption-forex-analysis/src/data/: loader.py  providers.py
ipoption-forex-analysis/src/signals/: performance.py  signal_generator.py
ipoption-forex-analysis/src/utils/: helpers.py
ipoption-forex-analysis/tests/: test_data.py  test_indicators.py  test_signals.py
