[tool.poetry]
name = "ipoption-forex-analysis"
version = "0.1.0"
description = "A project for market analysis and signal generation on the IPOPTION chart for Forex trading."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
scikit-learn = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"